--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Schedule">
+<ion-view view-title="Contacts">
   <ion-nav-bar class="bar-stable">
     <ion-nav-back-button>
     </ion-nav-back-button>
@@ -8,6 +8,6 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <h1>Schedule</h1>
+    <h1>Contacts</h1>
   </ion-content>
 </ion-view>
