--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -8,6 +8,32 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <h1>Contacts</h1>
+    <div class="contacttitles" align="right">
+      <h1 class="contanttitles">Main Coordinators</h1>
+    </div>
+    <div align="center" class="contactpanel">
+    <button class="yellowbutton contactbutton">+3934042014590</button>
+    </div>
+    <div align="center" class="contactpanel">
+      <button class="yellowbutton contactbutton">+393464764333</button>
+    </div>
+
+    <div class="contacttitles" align="right">
+      <h1 class="contanttitles">Emergency</h1>
+    </div>
+    <div align="center" class="contactpanel">
+      <button class="redbutton contactbutton">112</button>
+    </div>
+
+    <div class="contacttitles" align="right">
+      <h1 class="contanttitles">Other</h1>
+    </div>
+
+    <div align="center" class="contactpanel">
+      <button class="bluebutton contactbutton">118</button>
+    </div>
+    <div align="center" class="contactpanel">
+      <button class="bluebutton contactbutton">118</button>
+    </div>
   </ion-content>
 </ion-view>
