--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -8,6 +8,112 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <h1>Schedule</h1>
+    <div>
+    <ion-slide-box class="schedule" on-slide-changed="slideHasChanged($index)"
+    does-continue="true" show-pager="false">
+      <ion-slide class="firstday">
+        <div>
+          <h1>March 3 (first day)</h1>
+          <ion-list>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-slide>
+      <ion-slide class="secondday">
+        <div>
+          <h1>March 4 (second day)</h1>
+          <ion-list>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-slide>
+      <ion-slide class="thirdday">
+        <div>
+          <h1>March 5 (third day)</h1>
+          <ion-list>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+            <ion-item class="dayitem">
+              Hello
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-slide>
+    </ion-slide-box>
+    </div>
   </ion-content>
 </ion-view>
