--- a/www/templates/sponsors.html
+++ b/www/templates/sponsors.html
@@ -8,6 +8,6 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <h1>Sponsors</h1>
+    <h1>The list of Sponsors have to finalized</h1>
   </ion-content>
 </ion-view>
